--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
       <li *ngFor="let item of todos" [ngClass]="{'completed': item.done}">
         <div class="view">
           <input class="toggle" type="checkbox" checked [(ngModel)]="item.done">
-          <label>{{item.title}}</label>
+          <label>{{item.title | uppercase}}</label>
           <button class="destroy"></button>
         </div>
         <input class="edit" value="Create a TodoMVC template">
