--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     <ul class="todo-list">
       <!-- These are here just to show the structure of the list items -->
       <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-      <li *ngFor="let item of todos" [ngClass]="{'completed': item.done}">
+      <li *ngFor="let item of todos | filter:filterType" [ngClass]="{'completed': item.done}">
         <div class="view">
           <input class="toggle" type="checkbox" checked [(ngModel)]="item.done">
           <label>{{item.title | uppercase}}</label>
@@ -21,7 +21,7 @@
     </ul>
   </section>
   <!-- This footer should hidden by default and shown when there are todos -->
-  <app-footer *ngIf="todos.length > 0" [todos]="todos" (doClertodos)="doClertodos()" ></app-footer>
+  <app-footer *ngIf="todos.length > 0" [todos]="todos" (doClertodos)="doClertodos()" (doChangeFilterType)="doChangeFilterType($event)"></app-footer>
 </section>
 <footer class="info">
   <p>Double-click to edit a todo</p>
