--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,14 @@
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
   <section class="main" *ngIf="todos.length > 0">
-    <input class="toggle-all" type="checkbox">
+    <input class="toggle-all" type="checkbox" [(ngModel)]="toggleAll" (ngModelChange)="doToggleAll($event)">
     <label for="toggle-all">Mark all as complete</label>
     <ul class="todo-list">
       <!-- These are here just to show the structure of the list items -->
       <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
       <li *ngFor="let item of todos | filter:filterType" [ngClass]="{'completed': item.done}">
         <div class="view">
-          <input class="toggle" type="checkbox" checked [(ngModel)]="item.done">
+          <input class="toggle" type="checkbox" checked [(ngModel)]="item.done" (ngModelChange)="updateToggleAllState()">
           <label>{{item.title | uppercase}}</label>
           <button class="destroy"></button>
         </div>
