--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         <div class="view">
           <input class="toggle" type="checkbox" checked [(ngModel)]="item.done" (ngModelChange)="updateToggleAllState()">
           <label>{{item.title | uppercase}}</label>
-          <button class="destroy"></button>
+          <button class="destroy" (click)="removeTodo(item)"></button>
         </div>
         <input class="edit" value="Create a TodoMVC template">
       </li>
