--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
       <li *ngFor="let item of todos | filter:filterType" [ngClass]="{'completed': item.done}">
         <div class="view">
-          <input class="toggle" type="checkbox" checked [(ngModel)]="item.done" (ngModelChange)="updateToggleAllState()">
+          <input class="toggle" type="checkbox" checked [(ngModel)]="item.done" (ngModelChange)="updateTodo(item)">
           <label>{{item.title | uppercase}}</label>
           <button class="destroy" (click)="removeTodo(item)"></button>
         </div>
